trunk/Archive2/65/0277cfe57e793e/output
main.cpp:24:3: error: no matching function for call to 'ReceiveFuncPtr'
  ReceiveFuncPtr(&MySet<int>::insert);  // OK
  ^~~~~~~~~~~~~~
main.cpp:5:3: note: candidate template ignored: couldn't infer template argument 'Return'
T ReceiveFuncPtr (Return (T::*Method)(const int&))
  ^
1 error generated.
